# nutmeg-sdl

./: .gitignore  CMakeLists.txt  README.txt
Engine/CoreSrc/: Nutmeg.h
Engine/CoreSrc/Common/: Array.h  Debug.cpp  Debug.h  Log.cpp  Log.h  Map.h  Resource.cpp  Resource.h  SolidArray.h  Str.h
Engine/CoreSrc/Engine/: Application.cpp  Application.h  Console.cpp  Console.h  Engine.cpp  Engine.h  Timer.cpp
Engine/CoreSrc/Game/: Entity.cpp  Entity.h  Game.cpp  Game.h  Level.cpp  Level.h
Engine/CoreSrc/Math/: MathCore.h
Engine/CoreSrc/Physics/: AbstractPhysics.cpp  PhysicsNewton.cpp
Engine/CoreSrc/Platform/: AbstractPlatform.h
Engine/CoreSrc/Render/: AbstractRender.cpp  AbstractRender.h  Camera.cpp  Material.cpp  RenderBadaOpenGL1.cpp  RenderOpenGL1.cpp  RenderOpenGL2.cpp  Skeleton.cpp  Skeleton.h
Engine/CoreSrc/Scene/: BoneNode.h  CameraNode.cpp  EntityNode.cpp  MeshNode.cpp  MeshNode.h  Node.cpp  ParticleNode.cpp  ParticleNode.h  ParticleSystemNode.cpp  ParticleSystemNode.h  PhysicsNode.cpp  Scene.cpp  Scene.h  SkinnedMeshNode.cpp  SkinnedMeshNode.h  TextNode.cpp  TextNode.h
Engine/Subsystems/Audio/: AudioBada.cpp  AudioSquall.cpp
Engine/Subsystems/Platform/: PlatformBada.cpp  PlatformSDL.cpp  PlatformSDL.h  PlatformWindows.cpp
Resource/: cat.mesh  physics.xml_scene
Resource/Core/Shaders/: ambient_skin.vs  light_skin.vs
Resource/core/fonts/: dos.xml_font  fixed_sys.xml_font  ms_sans_serif_24.xml_font  ms_sans_serif_8.xml_font
Resource/core/shaders/: light_parallax.fs
Resource/game/: scn_author.xml_scene  scn_game.xml_scene  scn_mainmenu.xml_scene
Samples/CBTemplate/Resource/: bone_axe.mesh  compound.xml_scene  scene.xml_scene
Samples/CBTemplate/Resource/Core/Shaders/: ambient_parallax.fs
Samples/CBTemplate/Source/: CBTemplate.cbp  CBTemplate.depend  CBTemplate.layout  Settings.h  main.cpp
Samples/example/: Settings.h  main.cpp
Samples/nutris/: CState.h  CStateManager.h  game.cpp  game.h  main.cpp  st_author.h  st_autor.cpp  st_conf.h  st_game.cpp  st_game.h  st_mainmenu.cpp  st_mainmenu.h
Samples/sln_Nutmeg/: sln_Nutmeg.sln
Samples/sln_Nutmeg/exe_Sample1/: exe_Sample1.vcxproj
